CSS fix: make it look less terrible on mobile

--- a/assets/css/website.css
+++ b/assets/css/website.css
@@ -296,7 +296,7 @@ blockquote p{
   color: #cdcdcd;
 }
 #buy-popin{
-  padding: 50px 25px;
+  padding: 30px 15px;
 }
 
 .store{
